--- a/css/style.css
+++ b/css/style.css
@@ -9125,7 +9125,7 @@
     padding-top: 0 !important; }
   
   .ftco-no-pb {
-    padding-bottom: 0 !important; }
+    padding-bottom: 1.5rem !important; }
   
   .ftco-bg-dark {
     background: #3c312e; }
