--- a/css/style.css
+++ b/css/style.css
@@ -9758,7 +9758,7 @@
   }
   
   #project-7:hover{
-    background-image: url("../images/projects/C++_logo.png") !important;
+    background-image: url("../images/projects/Pac-Man.jpg") !important;
   }
   
   #project-8:hover{
