--- a/css/style.css
+++ b/css/style.css
@@ -2092,32 +2092,19 @@
     background-color: #373536 !important;
     border-color: #36b772 !important;
   }
-  
-  .btn-primary {
-    color: #fff;
-    background-color: #007bff;
-    border-color: #007bff; }
-    .btn-primary:hover {
-      color: #fff;
-      background-color: #0069d9;
-      border-color: #0062cc; }
-    .btn-primary:focus, .btn-primary.focus {
-      -webkit-box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-      box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5); }
-    .btn-primary.disabled, .btn-primary:disabled {
-      color: #fff;
-      background-color: #007bff;
-      border-color: #007bff; }
-    .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-    .show > .btn-primary.dropdown-toggle {
-      color: #fff;
-      background-color: #0062cc;
-      border-color: #005cbf; }
-      .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
-      .show > .btn-primary.dropdown-toggle:focus {
-        -webkit-box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
-        box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5); }
-  
+  .btn-download {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+}
+.btn-download:hover {
+  background-color: #45a049;
+}
+ 
   .btn-secondary {
     color: #fff;
     background-color: #6c757d;
