--- a/css/style.css
+++ b/css/style.css
@@ -9803,7 +9803,7 @@ textarea.form-control {
 }
 
 #project-8:hover{
-  background-image: url("../images/projects/C++_logo.png") !important;
+  background-image: url("../images/projects/Knigth.png") !important;
 }
 
 #project-9:hover{
